--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,9 +45,70 @@ a {
 }
 
 .custom-shape-divider-bottom-1675285807 .shape-fill {
-  fill: #ffffff;
+  fill: #f8fafc;
 }
 
 .steps .step:before {
   background-color: #80d0d0;
+}
+
+.custom-shape-divider-top-1675529624 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1675529624 svg {
+  position: relative;
+  display: block;
+  width: calc(171% + 1.3px);
+  height: 85px;
+}
+
+.custom-shape-divider-top-1675529624 .shape-fill {
+  fill: #f8fafc;
+}
+
+blockquote {
+  font-size: 18px;
+  line-height: 1.45;
+  position: relative;
+  color: #383838;
+}
+
+blockquote:before {
+  display: block;
+  padding-left: 10px;
+  content: "\201C";
+  font-size: 90px;
+  position: absolute;
+  left: -30px;
+  top: -70px;
+  color: white;
+}
+
+blockquote cite {
+  color: #999999;
+  font-size: 14px;
+  display: block;
+  margin-top: 5px;
+}
+
+blockquote cite:before {
+  content: "\2014 \2009";
+}
+
+.player-wrapper {
+  position: relative;
+  padding-top: 56.25%; /* 720 / 1280 = 0.5625 */
+}
+
+.react-player {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
